# calendar-generator

./: README.md  mypy.ini  pyproject.toml
app/: calendar.py  main.py
tests/: conftest.py  test_api.py  test_calendar.py  test_data.py
