[tool.poetry]
name = "calendar-generator"
version = "0.1.0"
description = "A simple app for generating a calendar for the Renewable Exchange tech test"
authors = ["Alex Wilson <alex.adwilson@gmail.com>"]
readme = "README.md"
packages = [{include = "calendar_generator"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
pytest = "^7.2.0"
black = "^22.12.0"
mypy = "^0.991"
fastapi = "^0.89.1"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
